--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,22 +1,42 @@
 @import "./animation.scss";
 @import "./window.scss";
 
+// @mixin light {
+//   --theme: light;
+
+//   /* color */
+//   --white: white;
+//   --black: rgb(48, 48, 48);
+//   --gray: rgb(250, 250, 250);
+//   --primary: rgb(29, 147, 171);
+//   --second: rgb(231, 248, 255);
+//   --hover-color: #f3f3f3;
+//   --bar-color: rgba(0, 0, 0, 0.1);
+//   --theme-color: var(--gray);
+
+//   /* shadow */
+//   --shadow: 50px 50px 100px 10px rgb(0, 0, 0, 0.1);
+//   --card-shadow: 0px 2px 4px 0px rgb(0, 0, 0, 0.05);
+
+//   /* stroke */
+//   --border-in-light: 1px solid rgb(222, 222, 222);
+// }
 @mixin light {
   --theme: light;
 
   /* color */
-  --white: white;
-  --black: rgb(48, 48, 48);
-  --gray: rgb(250, 250, 250);
-  --primary: rgb(29, 147, 171);
-  --second: rgb(231, 248, 255);
+  --white: rgb(255, 255, 255);
+  --black: rgb(33, 33, 33);
+  --gray: rgb(240, 240, 240);
+  --primary: rgb(0, 123, 255); // 蓝色调
+  --second: rgb(46, 204, 113); // 绿色调
   --hover-color: #f3f3f3;
   --bar-color: rgba(0, 0, 0, 0.1);
-  --theme-color: var(--gray);
+  --theme-color: rgb(51, 0, 102);
 
   /* shadow */
-  --shadow: 50px 50px 100px 10px rgb(0, 0, 0, 0.1);
-  --card-shadow: 0px 2px 4px 0px rgb(0, 0, 0, 0.05);
+  --shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.2);
+  --card-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 
   /* stroke */
   --border-in-light: 1px solid rgb(222, 222, 222);
